2002-03-07  Akira TAGOH  <tagoh@redhat.com>

	* objects/ER/attribute.c (attribute_save): save a font property.
	(attribute_load): load a font property, and if can't load it, it's
	initialized.

	* objects/ER/entity.c (entity_save): save a font property.
	(entity_load): load a font property, and if can't load it, it's
	initialized.

	* objects/ER/relationship.c (relationship_save): save a font property.
	(relationship_load): load a font property, and if can't load it, it's
	initialized.

	* objects/UML/class.c (fill_in_fontdata): don't replace if it already
	has a vaule.
	(umlclass_save): save the font and the font size properties.
	(umlclass_load): load the font and the font size properties.

2002-03-05  Cyrille Chepelov  <cyrille@chepelov.org>

	* lib/string_prerenderer.[ch] (REMOVED):
	* lib/render.h:
	* lib/diagramdata.c:
	* lib/Makefile.am:
	* app/render_eps.c: got rid of the string-specific string
	prerenderer, transitioned its functionality towards Lars'
	two-phase rendering

2002-03-05  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* configure.in: Using Freetypes own check for ver >= 1.0.5.  You
	may need to rerun aclocal.

2002-03-04  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/font.c: First attempt at Unicodeness for Freetype.

2002-03-02  Lars Clausen  <lrclause@C194282.chmpgn1.il.home.com>

	* lib/font.c (font_string_width): Fixed font_string_width for
	freetype.  BB is now almost right.

2002-03-01  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/render_eps.h: 
	* app/paginate_psprint.c (paginate_psprint): 
	* lib/font.c: 
	* app/render_eps.c: Support for dumping postscript fonts into
	postscript files with freetype.  Fairly primitive, but works.
	Unicode version may have problems.

2002-02-28  Akira TAGOH  <tagoh@redhat.com>

	* objects/UML/class_dialog.c (class_read_from_dialog)
	(class_fill_in_dialog), (class_create_page): add the font selector and
	the font size selector.
